simplescript/core/parser.py
"""Parser for the SimpleScript language.

This module provides the Parser class that converts a sequence of tokens
into an Abstract Syntax Tree (AST) following the SimpleScript grammar.
"""

from typing import List, Callable, Optional
from simplescript.utils.parse_result import ParseResult
from simplescript.core.constants import (
    TT_INT,
    TT_FLOAT,
    TT_LSQUARE,
    TT_RSQUARE,
    TT_LBRACE,
    TT_RBRACE,
    TT_COLON,
    TT_STRING,
    TT_PLUS,
    TT_MINUS,
    TT_MUL,
    TT_DIV,
    TT_POW,
    TT_LPAREN,
    TT_RPAREN,
    TT_EE,
    TT_EQ,
    TT_NE,
    TT_LT,
    TT_GT,
    TT_LTE,
    TT_GTE,
    TT_EOF,
    TT_IDENTIFIER,
    TT_KEYWORD,
    TT_COMMA,
    TT_ARROW,
)
from simplescript.errors.errors import InvalidSyntaxError
from simplescript.ast.nodes import (
    ListNode,
    MapNode,
    NumberNode,
    StringNode,
    BinOpNode,
    UnaryOpNode,
    VarAccessNode,
    VarAssignNode,
    IfNode,
    ForNode,
    WhileNode,
    FuncDefNode,
    CallNode,
)
from simplescript.tokens.token import Token


class Parser:
    """Parses a sequence of tokens into an Abstract Syntax Tree (AST).

    Implements a recursive descent parser following the SimpleScript grammar,
    with operator precedence handled through the grammar structure.

    Grammar (ordered by precedence, lowest to highest):
        - expr: VAR assignment | SHOW access | logical (AND/OR)
        - comp_expr: NOT | comparison operators
        - arith_expr: addition / subtraction
        - term: multiplication / division
        - factor: unary +/-
        - power: exponentiation
        - call: function call
        - atom: literals, identifiers, parenthesized expressions, keywords

    Args:
        tokens: List of tokens produced by the Lexer.

    Attributes:
        tokens (list[Token]): The token sequence to parse.
        token_index (int): Current position in the token sequence.
        current_token (Token): The token at the current position.

    Example:
        >>> parser = Parser(tokens)
        >>> result = parser.parse()
        >>> if result.error:
        ...     print(result.error.as_string())
        ... else:
        ...     print(result.node)
    """

    def __init__(self, tokens: List[Token]) -> None:
        self.current_token: Optional[Token] = None
        self.tokens = tokens
        self.token_index: int = -1
        self.advance()

    def advance(self) -> Optional[Token]:
        """Advance to the next token in the sequence.

        Returns:
            The new current token, or None if past the end.
        """
        self.token_index += 1
        if self.token_index < len(self.tokens):
            self.current_token = self.tokens[self.token_index]
        return self.current_token

    def parse(self) -> ParseResult:
        """Parse the token sequence into an AST.

        Entry point for parsing. Parses a single expression and verifies
        that all tokens have been consumed.

        Returns:
            A ParseResult containing the root AST node on success,
            or an error if parsing fails.
        """
        res = self.expr()
        if not res.error and (
            self.current_token.type != TT_EOF
            and self.current_token.type != TT_IDENTIFIER
        ):
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected '+', '-', '*', '/', '^', '==', '!=', '<', '>', <=', '>=', 'AND' or 'OR'",
                )
            )
        return res

    def atom(self) -> ParseResult:
        """Parse an atomic expression.

        Handles the highest-precedence expressions: numeric literals,
        string literals, identifiers, parenthesized expressions, and
        keyword-initiated expressions (IF, FOR, WHILE, FUNC).

        Returns:
            A ParseResult containing the parsed AST node.
        """
        res = ParseResult()
        token = self.current_token

        if token.type in (TT_INT, TT_FLOAT):
            res.register_advancement()
            self.advance()
            return res.success(NumberNode(token))

        elif token.type == TT_STRING:
            res.register_advancement()
            self.advance()
            return res.success(StringNode(token))

        elif token.type == TT_IDENTIFIER:
            res.register_advancement()
            self.advance()
            return res.success(VarAccessNode(token))

        elif token.type == TT_LPAREN:
            res.register_advancement()
            self.advance()
            expr = res.register(self.expr())
            if res.error:
                return res
            if self.current_token.type == TT_RPAREN:
                res.register_advancement()
                self.advance()
                return res.success(expr)
            else:
                return res.failure(
                    InvalidSyntaxError(
                        self.current_token.pos_start,
                        self.current_token.pos_end,
                        "Expected ')'",
                    )
                )

        elif token.type == TT_LSQUARE:
            list_expr = res.register(self.list_expr())
            if res.error:
                return res

            return res.success(list_expr)

        elif token.type == TT_LBRACE:
            map_expr = res.register(self.map_expr())
            if res.error:
                return res

            return res.success(map_expr)

        elif token.matches(TT_KEYWORD, "IF"):
            if_expr = res.register(self.if_expr())
            if res.error:
                return res
            return res.success(if_expr)

        elif token.matches(TT_KEYWORD, "FOR"):
            for_expr = res.register(self.for_expr())
            if res.error:
                return res
            return res.success(for_expr)

        elif token.matches(TT_KEYWORD, "WHILE"):
            while_expr = res.register(self.while_expr())
            if res.error:
                return res
            return res.success(while_expr)

        elif token.matches(TT_KEYWORD, "FUNC"):
            func_def = res.register(self.func_def())
            if res.error:
                return res
            return res.success(func_def)

        return res.failure(
            InvalidSyntaxError(
                token.pos_start,
                token.pos_end,
                "Expected int, float, string, '+', '-', '[', '{', 'identifier', 'IF', 'FOR', 'WHILE', 'FUNC', or '('",
            )
        )

    def call(self) -> ParseResult:
        """Parse a function call expression.

        If an atom is followed by parentheses, it is parsed as a function
        call with arguments.

        Returns:
            A ParseResult containing a CallNode or the atom node.
        """
        res = ParseResult()
        atom = res.register(self.atom())
        if res.error:
            return res

        if self.current_token.type == TT_LPAREN:
            res.register_advancement()
            self.advance()
            arg_nodes = []

            if self.current_token.type == TT_RPAREN:
                res.register_advancement()
                self.advance()
            else:
                arg_nodes.append(res.register(self.expr()))
                if res.error:
                    return res.failure(
                        InvalidSyntaxError(
                            self.current_token.pos_start,
                            self.current_token.pos_end,
                            "Expected ')', 'VAR', 'IF', 'FOR', 'WHILE', 'FUNC', int, float, identifier, '+', '-', '(', '[' or 'NOT'",
                        )
                    )

                while self.current_token.type == TT_COMMA:
                    res.register_advancement()
                    self.advance()
                    arg_nodes.append(res.register(self.expr()))
                    if res.error:
                        return res

                if self.current_token.type != TT_RPAREN:
                    return res.failure(
                        InvalidSyntaxError(
                            self.current_token.pos_start,
                            self.current_token.pos_end,
                            "Expected ',' or ')'",
                        )
                    )

                res.register_advancement()
                self.advance()
            return res.success(CallNode(atom, arg_nodes))

        return res.success(atom)

    def power(self) -> ParseResult:
        """Parse a power (exponentiation) expression.

        Returns:
            A ParseResult containing the parsed AST node.
        """
        return self.bin_op(self.call, (TT_POW,), self.factor)

    def factor(self) -> ParseResult:
        """Parse a factor expression (handles unary +/-).

        Returns:
            A ParseResult containing a UnaryOpNode or a power expression.
        """
        res = ParseResult()
        token = self.current_token

        if token.type in (TT_PLUS, TT_MINUS):
            res.register_advancement()
            self.advance()
            factor = res.register(self.factor())
            if res.error:
                return res
            return res.success(UnaryOpNode(token, factor))

        return self.power()

    def term(self) -> ParseResult:
        """Parse a term expression (multiplication/division).

        Returns:
            A ParseResult containing the parsed AST node.
        """
        return self.bin_op(self.factor, (TT_MUL, TT_DIV))

    def arith_expr(self) -> ParseResult:
        """Parse an arithmetic expression (addition/subtraction).

        Returns:
            A ParseResult containing the parsed AST node.
        """
        return self.bin_op(self.term, (TT_PLUS, TT_MINUS))

    def if_expr(self) -> ParseResult:
        """Parse an if/elif/else conditional expression.

        Syntax: ``IF expr THEN expr (ELIF expr THEN expr)* (ELSE expr)?``

        Returns:
            A ParseResult containing an IfNode.
        """
        res = ParseResult()
        cases = []
        else_case = None

        if not self.current_token.matches(TT_KEYWORD, "IF"):
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected 'if' or 'IF'",
                )
            )

        res.register_advancement()
        self.advance()
        condition = res.register(self.expr())
        if res.error:
            return res

        if not self.current_token.matches(TT_KEYWORD, "THEN"):
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected 'then' or 'THEN'",
                )
            )

        res.register_advancement()
        self.advance()
        expr = res.register(self.expr())
        if res.error:
            return res

        cases.append((condition, expr))
        while self.current_token.matches(TT_KEYWORD, "ELIF"):
            res.register_advancement()
            self.advance()
            condition = res.register(self.expr())
            if res.error:
                return res

            if not self.current_token.matches(TT_KEYWORD, "THEN"):
                return res.failure(
                    InvalidSyntaxError(
                        self.current_token.pos_start,
                        self.current_token.pos_end,
                        "Expected 'then' or 'THEN'",
                    )
                )

            res.register_advancement()
            self.advance()
            expr = res.register(self.expr())
            if res.error:
                return res

            cases.append((condition, expr))

        if self.current_token.matches(TT_KEYWORD, "ELSE"):
            res.register_advancement()
            self.advance()
            else_case = res.register(self.expr())
            if res.error:
                return res

        return res.success(IfNode(cases, else_case))

    def for_expr(self) -> ParseResult:
        """Parse a for loop expression.

        Syntax: ``FOR identifier = expr TO expr (STEP expr)? THEN expr``

        Returns:
            A ParseResult containing a ForNode.
        """
        res = ParseResult()
        if not self.current_token.matches(TT_KEYWORD, "FOR"):
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected 'FOR'",
                )
            )

        res.register_advancement()
        self.advance()
        if self.current_token.type != TT_IDENTIFIER:
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected identifier",
                )
            )

        var_name = self.current_token
        res.register_advancement()
        self.advance()
        if self.current_token.type != TT_EQ:
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected '='",
                )
            )

        res.register_advancement()
        self.advance()
        start_value = res.register(self.expr())
        if res.error:
            return res

        if not self.current_token.matches(TT_KEYWORD, "TO"):
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected 'TO'",
                )
            )

        res.register_advancement()
        self.advance()
        end_value = res.register(self.expr())
        if res.error:
            return res

        if self.current_token.matches(TT_KEYWORD, "STEP"):
            res.register_advancement()
            self.advance()
            step_value = res.register(self.expr())
            if res.error:
                return res
        else:
            step_value = None

        if not self.current_token.matches(TT_KEYWORD, "THEN"):
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected 'THEN'",
                )
            )

        res.register_advancement()
        self.advance()
        body = res.register(self.expr())
        if res.error:
            return res

        return res.success(ForNode(var_name, start_value, end_value, step_value, body))

    def while_expr(self) -> ParseResult:
        """Parse a while loop expression.

        Syntax: ``WHILE expr THEN expr``

        Returns:
            A ParseResult containing a WhileNode.
        """
        res = ParseResult()
        if not self.current_token.matches(TT_KEYWORD, "WHILE"):
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected 'WHILE'",
                )
            )

        res.register_advancement()
        self.advance()
        condition = res.register(self.expr())
        if res.error:
            return res

        if not self.current_token.matches(TT_KEYWORD, "THEN"):
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected 'THEN'",
                )
            )

        res.register_advancement()
        self.advance()
        body = res.register(self.expr())
        if res.error:
            return res

        return res.success(WhileNode(condition, body))

    def func_def(self) -> ParseResult:
        """Parse a function definition expression.

        Syntax: ``FUNC name?(param1, param2, ...) -> expr``

        Returns:
            A ParseResult containing a FuncDefNode.
        """
        res = ParseResult()

        if not self.current_token.matches(TT_KEYWORD, "FUNC"):
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected 'FUNC'",
                )
            )

        res.register_advancement()
        self.advance()

        if self.current_token.type == TT_IDENTIFIER:
            var_name_tok = self.current_token
            res.register_advancement()
            self.advance()
            if self.current_token.type != TT_LPAREN:
                return res.failure(
                    InvalidSyntaxError(
                        self.current_token.pos_start,
                        self.current_token.pos_end,
                        "Expected '('",
                    )
                )
        else:
            var_name_tok = None
            if self.current_token.type != TT_LPAREN:
                return res.failure(
                    InvalidSyntaxError(
                        self.current_token.pos_start,
                        self.current_token.pos_end,
                        "Expected identifier or '('",
                    )
                )

        res.register_advancement()
        self.advance()
        arg_name_toks = []

        if self.current_token.type == TT_IDENTIFIER:
            arg_name_toks.append(self.current_token)
            res.register_advancement()
            self.advance()

            while self.current_token.type == TT_COMMA:
                res.register_advancement()
                self.advance()

                if self.current_token.type != TT_IDENTIFIER:
                    return res.failure(
                        InvalidSyntaxError(
                            self.current_token.pos_start,
                            self.current_token.pos_end,
                            "Expected identifier",
                        )
                    )

                arg_name_toks.append(self.current_token)
                res.register_advancement()
                self.advance()

            if self.current_token.type != TT_RPAREN:
                return res.failure(
                    InvalidSyntaxError(
                        self.current_token.pos_start,
                        self.current_token.pos_end,
                        "Expected ',' or ')'",
                    )
                )
        else:
            if self.current_token.type != TT_RPAREN:
                return res.failure(
                    InvalidSyntaxError(
                        self.current_token.pos_start,
                        self.current_token.pos_end,
                        "Expected identifier or ')'",
                    )
                )

        res.register_advancement()
        self.advance()

        if self.current_token.type != TT_ARROW:
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected '->'",
                )
            )

        res.register_advancement()
        self.advance()
        node_to_return = res.register(self.expr())
        if res.error:
            return res

        return res.success(FuncDefNode(var_name_tok, arg_name_toks, node_to_return))

    def list_expr(self) -> ParseResult:
        """Parse a list expression.

        Syntax: ``[expr (COMMA expr)*]``

        Returns:
            A ParseResult containing a ListNode.
        """

        res = ParseResult()
        element_nodes = []
        if self.current_token.type != TT_LSQUARE:
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected '['",
                )
            )

        res.register_advancement()
        self.advance()

        # Empty list
        if self.current_token.type == TT_RSQUARE:
            res.register_advancement()
            self.advance()
        else:
            element_nodes.append(res.register(self.expr()))
            if res.error:
                return res.failure(
                    InvalidSyntaxError(
                        self.current_token.pos_start,
                        self.current_token.pos_end,
                        "Expected ']', int, float, string, identifier, '['",
                    )
                )

            while self.current_token.type == TT_COMMA:
                res.register_advancement()
                self.advance()
                element_nodes.append(res.register(self.expr()))
                if res.error:
                    return res

            if self.current_token.type != TT_RSQUARE:
                return res.failure(
                    InvalidSyntaxError(
                        self.current_token.pos_start,
                        self.current_token.pos_end,
                        "Expected ',' or ']'",
                    )
                )

            res.register_advancement()
            self.advance()

        return res.success(ListNode(element_nodes))

    def map_expr(self) -> ParseResult:
        """Parse a map expression.

        Syntax: ``{key: value (COMMA key: value)*}``

        Returns:
            A ParseResult containing a MapNode.
        """
        res = ParseResult()
        key_value_pairs = []
        pos_start = self.current_token.pos_start.copy()

        if self.current_token.type != TT_LBRACE:
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected '{'",
                )
            )

        res.register_advancement()
        self.advance()

        # Empty map
        if self.current_token.type == TT_RBRACE:
            res.register_advancement()
            self.advance()
            return res.success(MapNode([], pos_start, self.current_token.pos_end))

        # Parse first key-value pair
        key_node = res.register(self.expr())
        if res.error:
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected '}', string, identifier, int, float, or expression",
                )
            )

        if self.current_token.type != TT_COLON:
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected ':'",
                )
            )

        res.register_advancement()
        self.advance()

        value_node = res.register(self.expr())
        if res.error:
            return res

        key_value_pairs.append((key_node, value_node))

        # Parse remaining key-value pairs
        while self.current_token.type == TT_COMMA:
            res.register_advancement()
            self.advance()

            key_node = res.register(self.expr())
            if res.error:
                return res

            if self.current_token.type != TT_COLON:
                return res.failure(
                    InvalidSyntaxError(
                        self.current_token.pos_start,
                        self.current_token.pos_end,
                        "Expected ':'",
                    )
                )

            res.register_advancement()
            self.advance()

            value_node = res.register(self.expr())
            if res.error:
                return res

            key_value_pairs.append((key_node, value_node))

        if self.current_token.type != TT_RBRACE:
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected ',' or '}'",
                )
            )

        res.register_advancement()
        self.advance()

        return res.success(
            MapNode(key_value_pairs, pos_start, self.current_token.pos_end)
        )

    def comp_expr(self) -> ParseResult:
        """Parse a comparison expression.

        Handles NOT prefix and comparison operators (==, !=, <, >, <=, >=).

        Returns:
            A ParseResult containing the parsed AST node.
        """
        res = ParseResult()

        if self.current_token.matches(TT_KEYWORD, "NOT"):
            operator_token = self.current_token
            res.register_advancement()
            self.advance()
            node = res.register(self.comp_expr())
            if res.error:
                return res
            return res.success(UnaryOpNode(operator_token, node))

        node = res.register(
            self.bin_op(self.arith_expr, (TT_EE, TT_NE, TT_LT, TT_GT, TT_LTE, TT_GTE))
        )
        if res.error:
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected int, float, '+', '-', '(', '[', 'NOT'",
                )
            )

        return res.success(node)

    def expr(self) -> ParseResult:
        """Parse a full expression.

        This is the top-level parsing method that handles variable
        assignment (VAR), variable access (SHOW), and logical
        operations (AND/OR).

        Returns:
            A ParseResult containing the parsed AST node.
        """
        res = ParseResult()

        # Variable assignment
        if self.current_token.matches(TT_KEYWORD, "VAR"):
            res.register_advancement()
            self.advance()

            if self.current_token.type != TT_IDENTIFIER:
                return res.failure(
                    InvalidSyntaxError(
                        self.current_token.pos_start,
                        self.current_token.pos_end,
                        "Expected identifier",
                    )
                )

            var_name = self.current_token
            res.register_advancement()
            self.advance()

            if self.current_token.type != TT_EQ:
                return res.failure(
                    InvalidSyntaxError(
                        self.current_token.pos_start,
                        self.current_token.pos_end,
                        "Expected '='",
                    )
                )

            res.register_advancement()
            self.advance()

            expr = res.register(self.expr())
            if res.error:
                return res

            return res.success(VarAssignNode(var_name, expr))

        # Variable access
        elif self.current_token.matches(TT_KEYWORD, "SHOW"):
            res.register_advancement()
            self.advance()

            if self.current_token.type != TT_IDENTIFIER:
                return res.failure(
                    InvalidSyntaxError(
                        self.current_token.pos_start,
                        self.current_token.pos_end,
                        "Expected identifier",
                    )
                )

            return res.success(VarAccessNode(self.current_token))

        node = res.register(
            self.bin_op(self.comp_expr, ((TT_KEYWORD, "AND"), (TT_KEYWORD, "OR")))
        )

        if res.error:
            return res.failure(
                InvalidSyntaxError(
                    self.current_token.pos_start,
                    self.current_token.pos_end,
                    "Expected Keyword, '+', '-', '(', '[', identifier, 'IF', 'FOR', 'WHILE', 'FUNC', or 'NOT'",
                )
            )

        return res.success(node)

    def bin_op(
        self, func_a: Callable, ops: tuple, func_b: Optional[Callable] = None
    ) -> ParseResult:
        """Parse a binary operation with given operator tokens.

        This is a generic method used to parse left-associative binary
        operations at various precedence levels.

        Args:
            func_a: Parser method for the left operand (and right if func_b is None).
            ops: Tuple of operator token types (or (type, value) tuples for keywords).
            func_b: Parser method for the right operand (defaults to func_a).

        Returns:
            A ParseResult containing the parsed BinOpNode chain.
        """
        if func_b is None:
            func_b = func_a

        res = ParseResult()
        left = res.register(func_a())
        if res.error:
            return res
        while (
            self.current_token.type in ops
            or (self.current_token.type, self.current_token.value) in ops
        ):
            op_tok = self.current_token
            res.register_advancement()
            self.advance()
            right = res.register(func_b())
            if res.error:
                return res
            left = BinOpNode(left, op_tok, right)

        return res.success(left)
